Corrected some text in model comparison notebook

--- a/notebooks/Section1_3-Model_Comparison.ipynb
+++ b/notebooks/Section1_3-Model_Comparison.ipynb
@@ -1044,17 +1044,17 @@
    "source": [
     "### Leave-one-out Cross-validation (LOO)\n",
     "\n",
-    "LOO cross-validation is an estimate of the out-of-sample predictive fit. In cross-validation, the data are repeatedly partitioned into training and holdout sets, iteratively fitting the model with the former and evaluating the fit with the holdout data. \n",
+    "LOO cross-validation is another estimate of the **out-of-sample predictive fit**. In cross-validation, the data are repeatedly partitioned into training and holdout sets, iteratively fitting the model with the former and evaluating the fit with the holdout data. \n",
     "\n",
     "The estimate of out-of-sample predictive fit from applying LOO cross-validation to a Bayesian model is:\n",
     "\n",
     "$$lppd_{loo} = \\sum_{i=1}^N \\log p_{post(-i)}(y_i) =  \\sum_{i=1}^N \\log \\left(\\frac{1}{S} \\sum_{s=1}^S p(y_i| \\theta^{(is)})\\right)$$\n",
     "\n",
-    "so, each prediction is conditioned on $N-1$ data points, which induces an underestimation of the predictive fit for smaller $N$. The resulting estimate of effective samples size is:\n",
+    "so, each prediction is conditioned on $N-1$ data points, which induces an **underestimation of the predictive fit** for smaller $N$. The resulting estimate of effective samples size is:\n",
     "\n",
     "$$p_{loo} = lppd - lppd_{loo}$$\n",
     "\n",
-    "As mentioned, using cross-validation for a Bayesian model, fitting $N$ copies of the model under different subsets of the data is computationally expensive. However, Vehtari et al. (2016) introduced an efficient computation of LOO from MCMC samples, which are corrected using Pareto-smoothed importance sampling (PSIS) to provide an estimate of point-wise out-of-sample prediction accuracy.\n",
+    "As mentioned, using cross-validation for a Bayesian model, fitting $N$ copies of the model under different subsets of the data is computationally expensive. However, Vehtari *et al.* (2016) introduced an efficient computation of LOO from MCMC sample, which are corrected using **Pareto-smoothed importance sampling (PSIS)** to provide an estimate of point-wise out-of-sample prediction accuracy.\n",
     "\n",
     "This involves estimating the importance sampling LOO predictive distribution\n",
     "\n",
@@ -1068,8 +1068,9 @@
     "\n",
     "$$p(y_i | y_{-i}) \\approx \\frac{1}{\\frac{1}{S} \\sum_{s=1}^S \\frac{1}{p(y_i | \\theta^{(s)})}}$$\n",
     "\n",
-    "However, the posterior is likely to have a smaller variance and thinner tails than the LOO posteriors, so this approximation induces instability due to the fact that the importance ratios can have high or infinite variance.\n",
-    "To deal with this instability, a generalized Pareto distribution fit to the upper tail of the distribution of the importance ratios can be used to construct a test for a finite importance ratio variance. If the test suggests the variance is infinite then importance sampling is halted."
+    "However, the posterior is likely to have a *smaller variance and thinner tails* than the LOO posteriors, so this approximation induces instability due to the fact that the importance ratios can have high or infinite variance.\n",
+    "\n",
+    "To deal with this instability, a generalized **Pareto distribution** fit to the upper tail of the distribution of the importance ratios can be used to construct a test for a finite importance ratio variance. If the test suggests the variance is infinite then importance sampling is halted."
    ]
   },
   {
@@ -1424,7 +1425,7 @@
    "source": [
     "### Interpretation\n",
     "\n",
-    "Though we might expect the hierarchical model to outperform non-hierarchical models, there is little to choose between the models in this case, giving that all models give similar values of the information criteria (particularly the top two). This is more clearly appreciated when we take into account the uncertainty (in terms of standard errors) of WAIC and LOO."
+    "Though we might expect the hierarchical model to vastly outperform non-hierarchical models, there is little to choose between the hierarchical and unpooled models in this case, giving that these two models give similar values of the information criteria. This is more clearly appreciated when we take into account the uncertainty (in terms of standard errors) of WAIC and LOO."
    ]
   },
   {
