--- a/notebooks/Section1_1-Basic_Bayes.ipynb
+++ b/notebooks/Section1_1-Basic_Bayes.ipynb
@@ -1566,7 +1566,7 @@
     "\n",
     "with Model() as radon_model:\n",
     "    \n",
-    "    μ = Normal('μ', mu=0, sd=5)\n",
+    "    μ = Normal('μ', mu=0, sigma=5)\n",
     "    σ = Uniform('σ', 0, 5)"
    ]
   },
@@ -1602,14 +1602,14 @@
    "source": [
     "with radon_model:\n",
     "    \n",
-    "    dist = Normal('dist', mu=μ, sd=σ, observed=hennepin_radon)"
+    "    dist = Normal('dist', mu=μ, sigma=σ, observed=hennepin_radon)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we go ahead and estimate the model paramters from the data, its a good idea to perform a **prior predictive check**. This involves sampling from the model before data are incorporated, and gives you an idea of the range of observations that would be considered reasonable within the scope of the modeling assumptions (including choice of priors). If the simnulations generate too many extreme observations relative to our expectations based on domain knowledge, then it can be an indication of problems with model formulation."
+    "Before we go ahead and estimate the model paramters from the data, it's a good idea to perform a **prior predictive check**. This involves sampling from the model before data are incorporated, and gives you an idea of the range of observations that would be considered reasonable within the scope of the modeling assumptions (including choice of priors). If the simnulations generate too many extreme observations relative to our expectations based on domain knowledge, then it can be an indication of problems with model formulation."
    ]
   },
   {
@@ -6159,7 +6159,7 @@
     "    μ = ?\n",
     "    σ = ?\n",
     "    \n",
-    "    dist = Normal('dist', mu=μ, sd=σ, observed=hennepin_radon)\n",
+    "    dist = Normal('dist', mu=μ, sigma=σ, observed=hennepin_radon)\n",
     "    \n",
     "    sensitivity_samples = sample(1000, tune=1000)"
    ]
@@ -8666,8 +8666,8 @@
    "source": [
     "with Model() as drug_model:\n",
     "    \n",
-    "    μ_0 = Normal('μ_0', 100, sd=10)\n",
-    "    μ_1 = Normal('μ_1', 100, sd=10)"
+    "    μ_0 = Normal('μ_0', 100, sigma=10)\n",
+    "    μ_1 = Normal('μ_1', 100, sigma=10)"
    ]
   },
   {
