Updates to section 3; added homework for section 3

--- a/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
+++ b/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
@@ -183,7 +183,9 @@
     "from theano import shared, function\n",
     "import theano.tensor as tt\n",
     "import pymc3 as pm\n",
-    "import arviz as az"
+    "import arviz as az\n",
+    "\n",
+    "RANDOM_SEED = 20090425"
    ]
   },
   {
@@ -249,6 +251,8 @@
     "We justified our choice of momentum previously, a random univariate Gaussian. The decisions regarding the number and size of steps has implications for the **path length** used to obtain a sample. Here are three different path lengths and the resulting samples (blue points):\n",
     "\n",
     "![HMC samples](images/HMC_samples.png)\n",
+    "\n",
+    "(from *Carroll 2019*)\n",
     "\n",
     "As you might expect, different step sizes and numbers are appropriate for different models, depending on the associated geometry, and therefore tuning is usually necessary."
    ]
@@ -1162,7 +1166,7 @@
     "\n",
     "with pku_model:\n",
     "\n",
-    "    trace = pm.sample(1000, tune=1000, return_inferencedata=True, init='adapt_diag')"
+    "    trace = pm.sample(1000, tune=1000, return_inferencedata=True, init='adapt_diag', random_seed=RANDOM_SEED)"
    ]
   },
   {
@@ -1266,7 +1270,7 @@
     "\n",
     "with pku_model:\n",
     "\n",
-    "    trace = pm.sample(1000, tune=1000, return_inferencedata=True, step=pm.HamiltonianMC())"
+    "    trace = pm.sample(1000, tune=1000, return_inferencedata=True, step=pm.HamiltonianMC(), random_seed=RANDOM_SEED)"
    ]
   },
   {
