--- a/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
+++ b/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
@@ -698,7 +698,7 @@
     "\n",
     "![](images/binary_doubling.png)\n",
     "\n",
-    "Doubling process builds a balanced binary tree whose leaf nodes correspond to\n",
+    "The doubling process builds a balanced binary tree whose leaf nodes correspond to\n",
     "position-momentum states. The number of doubling events is referred to as the **tree depth** of the simulation.\n",
     "\n",
     "Doubling is halted when the subtrajectory from the leftmost to the rightmost nodes of any balanced subtree of the overall binary tree starts to double back on itself\n",
