--- a/notebooks/Section3_2-Model-Checking.ipynb
+++ b/notebooks/Section3_2-Model-Checking.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Model Checking\n",
     "\n",
-    "After running an MCMC simulation, `sample` returns an object (as of PyMC 3.9, and `InferenceData` object) containing the samples for all the stochastic and deterministic random variables. The final step in Bayesian computation is model checking, in order to ensure that inferences derived from your sample are valid. \n",
+    "After running an MCMC simulation, `sample` returns an object (as of PyMC 3.9, an `InferenceData` object) containing the samples for all the stochastic and deterministic random variables. The final step in Bayesian computation is model checking, in order to ensure that inferences derived from your sample are valid. \n",
     "\n",
     "There are **two components** to model checking:\n",
     "\n",
@@ -237,7 +237,7 @@
     "1. **Set a higher \"target accept\" rate**: Similarly (but not the same) as for Metropolis-Hastings, larger integrator steps lead to lower acceptance rates. A higher `target_accept` will generally cause a smaller step size, and more accurate integration.\n",
     "2. **Reparametrize**: If you can write your model in a different way that has the same joint probability density, you might do that. A lot of work is being done to automate this, since it requires careful work, and one goal of a probabilistic programming language is to iterate quickly. See [Hoffmann, Johnson, Tran (2018)](https://arxiv.org/abs/1811.11926), [Gorinova, Moore, Hoffmann (2019)](https://arxiv.org/abs/1906.03028), and there is work on this also in [symbolic pymc](https://github.com/pymc-devs/symbolic-pymc).\n",
     "\n",
-    "You should be wary of a trace that contain many divergences (particularly those clustered in particular regions of the parameter space), and give thought to how to fix them."
+    "You should be wary of a trace that contains many divergences (particularly those clustered in particular regions of the parameter space), and give thought to how to fix them."
    ]
   },
   {
@@ -1602,7 +1602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using ArViZ, we can visualize the evolution of ESS as the MCMC sample accumulates. When the model is converging properly, both lines in this plot should be appriximately linear.\n",
+    "Using ArViZ, we can visualize the evolution of ESS as the MCMC sample accumulates. When the model is converging properly, both lines in this plot should be approximately linear.\n",
     "\n",
     "The standard ESS estimate, which mainly assesses how well the centre of the distribution is resolved, is referred to as **bulk-ESS**. In order to estimate intervals reliably, it is also important to consider the **tail-ESS**."
    ]
@@ -2119,7 +2119,7 @@
    "source": [
     "## Goodness of Fit\n",
     "\n",
-    "As noted at the beginning of this seciton, convergence diagnostics are only the first step in the evaluation\n",
+    "As noted at the beginning of this section, convergence diagnostics are only the first step in the evaluation\n",
     "of MCMC model outputs. It is possible for an entirely unsuitable model to converge, so additional steps are needed to ensure that the estimated model adequately fits the data. \n",
     "\n",
     "One intuitive way of evaluating model fit is to compare model predictions with the observations used to fit\n",
