Tweak to HMC notebook

--- a/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
+++ b/notebooks/Section3_1-Gradient-Based-MCMC.ipynb
@@ -98,11 +98,16 @@
     "\n",
     "As shown in [Neal (1993)](http://www.cs.toronto.edu/~radford/review.abstract.html), \n",
     "the above transformation preserves volume and is\n",
-    "**reversible**. The above dynamics can thus be used as transition operators\n",
+    "**reversible**. \n",
+    "\n",
+    "> Reversibility is the key property of MCMC algorithms, and is established when the **detailed balance** equation is satisfied:\n",
+    "> $$\\pi(x) P(x|y) = \\pi(y) P(y|x)$$\n",
+    "\n",
+    "The above dynamics can thus be used as transition operators\n",
     "of a Markov chain and will leave $p(s,\\phi)$ invariant. That chain by\n",
     "itself is not ergodic however, since simulating the dynamics maintains a\n",
     "fixed Hamiltonian $\\mathcal{H}(s,\\phi)$. HMC thus alternates Hamiltonian\n",
-    "dynamic steps, with Gibbs sampling of the velocity. Because $p(s)$ and\n",
+    "dynamic steps, with sampling of the velocity. Because $p(s)$ and\n",
     "$p(\\phi)$ are independent, sampling $\\phi_{new} \\sim p(\\phi|s)$ is\n",
     "trivial since $p(\\phi|s)=p(\\phi)$, where $p(\\phi)$ is often taken to be\n",
     "the univariate Gaussian.\n",
@@ -263,15 +268,11 @@
    "source": [
     "### Accept / Reject\n",
     "\n",
-    "In practice, using finite stepsizes $\\epsilon$ will not preserve\n",
-    "$\\mathcal{H}(s,\\phi)$ exactly and will introduce bias in the simulation.\n",
-    "Also, rounding errors due to the use of floating point numbers means\n",
-    "that the above transformation will not be perfectly reversible.\n",
+    "In practice, using finite stepsizes $\\epsilon$ will not preserve $\\mathcal{H}(s,\\phi)$ exactly and will introduce bias in the simulation.\n",
+    "Also, rounding errors due to the use of floating point numbers means that the above transformation will not be perfectly reversible.\n",
     "\n",
-    "HMC cancels these effects **exactly** by adding a Metropolis\n",
-    "accept/reject stage, after $n$ leapfrog steps. The new state\n",
-    "$\\chi' = (s',\\phi')$ is accepted with probability $p_{acc}(\\chi,\\chi')$,\n",
-    "defined as:\n",
+    "HMC cancels these effects **exactly** by adding a Metropolis accept/reject stage, after $n$ leapfrog steps. The new state\n",
+    "$\\chi' = (s',\\phi')$ is accepted with probability $p_{acc}(\\chi,\\chi')$, defined as:\n",
     "\n",
     "$$p_{acc}(\\chi,\\chi') = min \\left( 1, \\frac{\\exp(-\\mathcal{H}(s',\\phi')}{\\exp(-\\mathcal{H}(s,\\phi)} \\right)$$\n",
     "\n",
