Updates to nonparametric Bayes

--- a/notebooks/Section5_2-Dirichlet_Processes.ipynb
+++ b/notebooks/Section5_2-Dirichlet_Processes.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Dirichlet Processes\n",
     "\n",
-    "We have seen with parametric mixture models that we can assign group labels to observations using a model, but so far we have assumed that we know how many groups there are *a priori*. What if we don't know how many groups produced the data? We often want the choice of $K$ to be **data-driven**.\n",
+    "Parametric mixture models can be used to assign group labels to observations, but such models assume that we know how many latent groups there are *a priori*. What if we don't know how many groups produced the data? We often want the choice of $K$ to be **data-driven**.\n",
     "\n",
     "There are a number of approaches for allocating samples to groups where the number of groups is not pre-determined. We will look at two generative methods here.\n",
     "\n",
@@ -1735,49 +1735,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise: Random effects meta-analysis\n",
-    "\n",
-    "Recall the beta-blockers meta-analysis from Homework 2, where Carlin (1992) considers a Bayesian approach to meta-analysis, and includes examples of 22 trials of beta-blockers to prevent mortality after myocardial infarction. \n",
-    "\n",
-    "In one possible random effects model we assume the true effect (on a log-odds scale) $d_i$ in a trial $i$ is drawn from some population distribution. Let $r^C_i$ denote number of events in the control group in trial $i$, and $r^T_i$ denote events under active treatment in trial $i$. Our model is:\n",
-    "\n",
-    "$$\\begin{aligned}\n",
-    "r^C_i &\\sim \\text{Binomial}\\left(p^C_i, n^C_i\\right) \\\\\n",
-    "r^T_i &\\sim \\text{Binomial}\\left(p^T_i, n^T_i\\right) \\\\\n",
-    "\\text{logit}\\left(p^C_i\\right) &= \\mu \\\\\n",
-    "\\text{logit}\\left(p^T_i\\right) &= \\mu + \\delta_i \\\\\n",
-    "\\delta_i &\\sim f\n",
-    "\\end{aligned}$$\n",
-    "\n",
-    "Instead of assuming a Gaussian random effect $f$, experiment with Dirichlet process priors, and check whether it improves the resulting model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r_t_obs = [3, 7, 5, 102, 28, 4, 98, 60, 25, 138, 64, 45, 9, 57, 25, 33, 28, 8, 6, 32, 27, 22]\n",
-    "n_t_obs = [38, 114, 69, 1533, 355, 59, 945, 632, 278,1916, 873, 263, 291, 858, 154, 207, 251, 151, 174, 209, 391, 680]\n",
-    "r_c_obs = [3, 14, 11, 127, 27, 6, 152, 48, 37, 188, 52, 47, 16, 45, 31, 38, 12, 6, 3, 40, 43, 39]\n",
-    "n_c_obs = [39, 116, 93, 1520, 365, 52, 939, 471, 282, 1921, 583, 266, 293, 883, 147, 213, 122, 154, 134, 218, 364, 674]\n",
-    "N = len(n_c_obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "## References\n",
     "\n",
@@ -1789,9 +1746,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('bayes_course': conda)",
+   "display_name": "bayes_course",
    "language": "python",
-   "name": "python37664bitbayescoursecondaac15308fe835468386ae397edcb53ec9"
+   "name": "bayes_course"
   },
   "language_info": {
    "codemirror_mode": {
