Added some approximation background to GP notebook

--- a/notebooks/Section5_1-Gaussian_Processes.ipynb
+++ b/notebooks/Section5_1-Gaussian_Processes.ipynb
@@ -1931,7 +1931,7 @@
    "source": [
     "## Faster Gaussian processes\n",
     "\n",
-    "One of the major constraints that limits the utility of Gaussian processes in practice is the inversion of $K$ when calculating the posterior covariance. Since it is evaluated at every observed data point, its execution time is $\\mathcal{O(n^3)}$, which makes Gaussian processes (in the form I have presented here) impractical for larger datasets.\n",
+    "One of the major constraints that limits the utility of Gaussian processes in practice is the inversion of $K$ when calculating the posterior covariance. Since it is evaluated at every observed data point, its execution time is $\\mathcal{O(N^3)}$, which makes Gaussian processes (in the form I have presented here) impractical for larger datasets.\n",
     "\n",
     "An approach for dealing with this computation complexity is to look for an approximation to accelerate training and prediction. For Gaussian processes, this can be accomplished by employing a **sparse approximation** to the Gram matrix that places $M<<N$ *inducing points* along the range of the input variables, and uses this to estimate the full covariance matrix for the observed points. \n",
     "\n",
@@ -2015,6 +2015,30 @@
     "in place of the full Gram matrix $K_{xx}$:\n",
     "\n",
     "$$Q_{xx} = K_{xu}K_{uu}^{-1}K_{ux}$$\n",
+    "\n",
+    "Each method modifies the marginal likelihood to some form of the following:\n",
+    "\n",
+    "$$\\mathcal{F}=\\frac{N}{2} \\log (2 \\pi)+\\underbrace{\\frac{1}{2} \\log \\left|Q_{\\mathrm{xx}}+G\\right|}_{\\text {complexity penalty }}+\\underbrace{\\frac{1}{2} \\mathbf{y}^{\\top}\\left(Q_{\\mathrm{xx}}+G\\right)^{-1} \\mathbf{y}}_{\\text {data fit }}+\\underbrace{\\frac{1}{2 \\sigma_{n}^{2}} \\operatorname{tr}(T)}_{\\text {trace term }}$$\n",
+    "\n",
+    "For example, in FITC, the following terms are used:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{l}\n",
+    "G_{\\mathrm{FITC}}=\\operatorname{diag}\\left[K_{\\mathrm{ff}}-Q_{\\mathrm{ff}}\\right]+\\sigma_{n}^{2} I \\\\\n",
+    "T_{\\mathrm{FITC}}=0\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "whereas, in VFE the terms are:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "G_{\\mathrm{VFE}} &=\\sigma_{n}^{2} I \\\\\n",
+    "T_{\\mathrm{VFE}} &=K_{\\mathrm{ff}}-Q_{\\mathrm{ff}}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "In any case, the computational complexity is reduced from $\\mathcal{O}\\left(N^{3}\\right)$ in compute time and $\\mathcal{O}\\left(N^{2}\\right)$ in storage to $\\mathcal{O}\\left(NM^{2}\\right)$ and $\\mathcal{O}\\left(NM\\right)$, respectively.\n",
     "\n",
     "We will use the FITC algorithm (the default method) to estimate the model, with the critical approximation being the imposition of a conditional independence assumption on the joint prior over training and test cases."
    ]
